--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "tsci",
   "devDependencies": {
-    "@types/bun": "1.2.16",
+    "@types/bun": "1.2.17",
     "@types/react": "19.1.8",
-    "bun": "1.2.16",
-    "tscircuit": "0.0.496",
-    "typescript": "5.8.3"
-  }
+    "bun": "1.2.17",
+    "tscircuit": "0.0.508",
+    "typescript": "5.8.3",
+    "@tscircuit/cli": "0.1.149",
+    "@tscircuit/props": "0.0.245"
+  },
+  "private": true
 }
